Fixed row overflow on species page

--- a/src/app/pages/profile-reveal/species.scss
+++ b/src/app/pages/profile-reveal/species.scss
@@ -82,7 +82,7 @@
   &__reveal-container { // .page-species__reveal-container
     display: flex;
     justify-content: flex-end;
-    align-items: center;
+    //align-items: center;
     z-index: 5;
     padding-top: 30px;
     padding-bottom: 30px;
