--- a/src/styles/row.scss
+++ b/src/styles/row.scss
@@ -16,5 +16,10 @@
     flex-grow: 1;
     align-items: stretch;
   }
+
+  &--species-reveal {
+    margin-top: auto;
+    margin-bottom: auto;
+  }
 }
 
